# Experiments

Arduino/Nixie/: Nixie.cpp  Nixie.h  README  keywords.txt
Arduino/XBee_000/: XBee_000.pde
Arduino/motion_activated/: motion_activated.pde
AudioCapture/roundware/: TODO
Data/PUMA2000/: puma5-clipped.dbf  puma5-clipped.shp  puma5-clipped.shx
Data/dasy_2000/: full_dasy00.aux  metadata2000.htm
Data/geonamea_ppl_2006.shp (1)/: geonamea_ppl_2006.sbn  geonamea_ppl_2006.sbx  geonamea_ppl_2006.shp  geonamea_ppl_2006.shp.xml  geonamea_ppl_2006.shx
Data/test/: CAFaults.dbf  CAFaults.shp  CAFaults.shx  California.shx  Geo.qpj  Geo.shx  PUMA.dbf  PUMA.shp  PUMA.shx  Urban2020.dbf  Urban2020.shp  Urban2020.shx  Urban2050.dbf  Urban2050.shp  Urban2050.shx
Data/tl_2010_01001_linearwater/: tl_2010_01001_linearwater.dbf  tl_2010_01001_linearwater.shp  tl_2010_01001_linearwater.shp.xml  tl_2010_01001_linearwater.shx
Data/urban2020_ca/: urban2020_ca.dbf  urban2020_ca.sbn  urban2020_ca.sbx  urban2020_ca.shp  urban2020_ca.shp.xml  urban2020_ca.shx
Data/urban2050_ca/: urban2050_ca.dbf  urban2050_ca.sbn  urban2050_ca.sbx  urban2050_ca.shp  urban2050_ca.shp.xml  (+1 more)
QGIS/: Population2020-50.qgs
RailsHelloWorld/: .project  Rakefile
SeismicSimulation/eqsimio-0.1.1/: INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  portinfo.in
SeismicSimulation/eqsimio-0.1.1/doc/html/: CHANGES.html  DataImporter_8h.html  DataReader_8h.html  GeometryImporter_8h.html  GeometryReader_8h.html  INSTALL.html  README_8formats.html  StreamTranslator_8h.html  annotated.html  classeqsimio_1_1DataImporter-members.html  classeqsimio_1_1DataImporter.html  classeqsimio_1_1DataReader-members.html  classeqsimio_1_1DataReader.html  classeqsimio_1_1GeometryImporter-members.html  classeqsimio_1_1GeometryImporter.html  classeqsimio_1_1GeometryReader-members.html  classeqsimio_1_1GeometryReader.html  classeqsimio_1_1StreamTranslator-members.html  classeqsimio_1_1StreamTranslator.html  files.html  formula.repository  functions.html  functions_eval.html  functions_func.html  index.html
SeismicSimulation/eqsimio-0.1.1/examples/: Makefile.am  Makefile.in  readeqsim.cc
SeismicSimulation/eqsimio-0.1.1/lib/: DataImporter.cc  DataImporter.h  DataImporter.icc  DataReader.cc  DataReader.h  GeometryImporter.cc  GeometryImporter.h  GeometryImporter.icc  GeometryReader.cc  GeometryReader.h  Makefile.am  Makefile.in  StreamTranslator.cc  StreamTranslator.h  StreamTranslator.icc
ShipTracker/: .project
_misc/: color_pallet.psd
applescripts/: Run.scpt
iOS_Primer/: Certificates.p12  Experimental_Development.mobileprovision  developer_identity.cer
shells/: generate_contours.sh  isolate_countours.sh  merge_shapes.sh  translate.sh
(+6928 files in other folders)
