# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

SUBDIRS = \
	lib \
	examples

# version
# $Id: Makefile.am 2363 2006-01-29 22:30:23Z brad $

# End of file 
