# -*- autoconf -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

AC_PREREQ(2.59)
AC_INIT([eqsimio], [0.1.1], [baagaard@usgs.gov])
AC_CONFIG_HEADER([portinfo])
AC_CONFIG_AUX_DIR([./aux-config])
AM_INIT_AUTOMAKE([foreign])

# ----------------------------------------------------------------------

AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

# ----------------------------------------------------------------------
AC_CONFIG_FILES([Makefile
	lib/Makefile
        examples/Makefile])

AC_OUTPUT


# version
# $Id: configure.ac 2368 2006-02-02 16:36:04Z brad $

# End of file 
