# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

bin_PROGRAMS = readeqsim

readeqsim_SOURCES = \
	readeqsim.cc

INCLUDES = -I$(top_srcdir)/lib

readeqsim_LDADD = \
	$(top_builddir)/lib/libeqsimio.la

# version
# $Id: Makefile.am 2363 2006-01-29 22:30:23Z brad $

# End of file 
