# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

lib_LTLIBRARIES = libeqsimio.la

libeqsimio_la_SOURCES = \
	DataImporter.cc \
	DataReader.cc \
	GeometryImporter.cc \
	GeometryReader.cc \
	StreamTranslator.cc

include_HEADERS = \
	DataImporter.h \
	DataImporter.icc \
	GeometryImporter.h \
	GeometryImporter.icc

noinst_HEADERS = \
	DataReader.h \
	GeometryReader.h \
	StreamTranslator.h \
	StreamTranslator.icc

# version
# $Id: Makefile.am 2363 2006-01-29 22:30:23Z brad $

# End of file 
